@@ -2,6 +2,7 @@ Version 2.4.1
 * Write autocorrs for all pulsar bins
 * Fix indexing by antennas after merging.  Affects: UV, MC, ML tables
 * Check for existance of some data for each job being correlated
+* Check for sniffer interval > tInt and change if needed
 
 Version 2.4
 * Post NRAO-DiFX 1.1 development
